# haskell-loader-example

./: .gitignore  .swcrc  README.md  package.json  webpack.config.js
haskell-project/: cabal.project  example.cabal
haskell-project/app/: Main.hs
